feat: compatible metaid and global metaid
