# docs/indexer/indexer_swagger.json
@@ -677,7 +677,57 @@
                 }
             }
         },
-        "/info/metaid/{metaid}": {
+        "/info/globalmetaid/{globalMetaID}": {
+            "get": {
+                "description": "Query user information in MetaID format by address",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Indexer User Info"
+                ],
+                "summary": "Get MetaID user info by Global MetaID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Global MetaID",
+                        "name": "globalMetaID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/meta-file-system_controller_respond.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/meta-file-system_controller_respond.MetaIDUserInfo"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/meta-file-system_controller_respond.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/info/metaid/{metaidOrGlobalMetaId}": {
             "get": {
                 "description": "Query user information in MetaID format by MetaID",
                 "consumes": [
@@ -1540,6 +1590,10 @@
                     "type": "string",
                     "example": "def456i0"
                 },
+                "globalMetaId": {
+                    "type": "string",
+                    "example": "idaddress..."
+                },
                 "metaid": {
                     "type": "string",
                     "example": "abc123def456..."
@@ -1752,6 +1806,10 @@
                 },
                 "chatPublicKeyPinId": {
                     "description": "聊天公钥 PIN ID",
+                    "type": "string"
+                },
+                "globalMetaId": {
+                    "description": "全局 MetaID",
                     "type": "string"
                 },
                 "metaId": {
